# PythonAPIAzureQuickstart

./: LICENSE  README.md
deploy/: README.md  build_pipeline.yml  infrastructure_pipeline.yml
deploy/docker/: Dockerfile  docker-compose.yml
src/backend/: pyproject.toml
src/backend/api/: main_api.py
src/backend/tests/integration/: test_api_integration.py
src/backend/tests/unit/: test_api_unit.py
