[tool.poetry]
name = "PythonAPIAzureCloudTemplate"
version = "0.1.0"
description = "A Python API template for deploying to the Azure Cloud with CICD"
authors = ["bauca <bruno.assis@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
requests = "^2.31.0"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
